# attack-knowledge-bases-mindmaps

./: .gitignore  README.md  capec_ignored_keys.txt  cwe_ignored_keys.txt  generate_mindmaps.py  parser.py  pyproject.toml  requirements.txt  setup.py
schemas/: ap_schema_latest.xsd.xml
